@@ -1,5 +1,10 @@
 2018-03-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/dcm.c (ReadDCMImage): Validate that samples per pixel is
+	in valid range.  Fixes oss-fuzz 6260
+	"graphicsmagick/coder_DCM_fuzzer: Out-of-memory in
+	graphicsmagick_coder_DCM_fuzzer". (Credit to OSS-Fuzz)
+
 	* coders/meta.c (format8BIM): Allocate space for null termination
 	and null terminate string.  Fixes oss-fuzz 5985
 	"graphicsmagick/coder_8BIMTEXT_fuzzer: Heap-buffer-overflow in
